# openapi.yml
@@ -44,12 +44,13 @@ paths:
           application/json:
             schema:
               type: object
+              required:
+                - name
+                - parent
               properties:
                 name:
                   type: string
-                  required: true
                 parent:
-                  required: true
                   oneOf:
                     - type: string
                     - type: integer
@@ -122,12 +123,13 @@ paths:
                 file:
                   type: string
                   format: binary
-                  required: true
                 folder:
-                  required: true
                   oneOf:
                     - type: string
                     - type: integer
+              required:
+                - file
+                - folder
 
   /files/{id}:
     delete:
@@ -175,7 +177,6 @@ components:
         - id
         - name
         - parent
-        - hasChildren
       properties:
         id:
           $ref: '#/components/schemas/ID'
@@ -188,9 +189,6 @@ components:
           oneOf:
             - type: string
             - type: integer
-        hasChildren:
-          type: boolean
-          description: This folder has subfolder
     File:
       type: object
       required:
@@ -220,4 +218,3 @@ components:
       oneOf:
         - type: string
         - type: integer
-
